--- a/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,7 +19,7 @@
             <ButtonBar layoutX="40.0" prefHeight="40.0" prefWidth="200.0" />
          </children></Pane>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#095194" height="423.0" layoutX="24.0" layoutY="27.0" stroke="BLACK" strokeType="INSIDE" width="631.0" />
-      <GridPane hgap="2.0" layoutX="25.0" layoutY="34.0" prefHeight="404.0" prefWidth="631.0" vgap="5.0">
+      <GridPane fx:id="grid" hgap="2.0" layoutX="25.0" layoutY="34.0" prefHeight="404.0" prefWidth="631.0" vgap="5.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,228 +38,249 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <StackPane>
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.rowIndex="1">
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="1">
+            <StackPane GridPane.columnIndex="1" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.rowIndex="2">
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.rowIndex="3">
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.rowIndex="4">
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="2">
+            <StackPane GridPane.columnIndex="2"  GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.rowIndex="5">
+            <StackPane GridPane.columnIndex="0" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="2" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="2" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="3" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="3" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="3" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="3" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="3">
+            <StackPane GridPane.columnIndex="3" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="5" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="5" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="5" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="5">
+            <StackPane GridPane.columnIndex="5" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="4" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="4" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="4" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="4" GridPane.rowIndex="2">
                <children>
                   <StackPane>
                      <children>
-                        <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                        <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                   </StackPane>
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="4">
+            <StackPane GridPane.columnIndex="4" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="4" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="3" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
-            <StackPane GridPane.columnIndex="6">
+            <StackPane GridPane.columnIndex="6" GridPane.rowIndex="0">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="6" GridPane.rowIndex="1">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="6" GridPane.rowIndex="2">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="6" GridPane.rowIndex="3">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="5" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="6" GridPane.rowIndex="4">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane prefHeight="17.0" prefWidth="34.0" GridPane.columnIndex="6" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
             <StackPane GridPane.columnIndex="5" GridPane.rowIndex="5">
                <children>
-                  <Circle fill="#f7f9fc" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fill="WHITE" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                </children>
             </StackPane>
          </children>
       </GridPane>
-      <Button layoutX="30.0" layoutY="26.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
-    <Button layoutX="117.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="75.0" text="Button" />
-      <Button layoutX="195.0" layoutY="26.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="96.0" text="Button" />
-      <Button layoutX="295.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
-      <Button layoutX="385.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="89.0" text="Button" />
-      <Button layoutX="480.0" layoutY="27.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
-      <Button layoutX="570.0" layoutY="29.0" mnemonicParsing="false" prefHeight="423.0" prefWidth="82.0" text="Button" />
+      <Button fx:id="button1" layoutX="30.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+    <Button fx:id="button2" layoutX="117.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="button3" layoutX="209.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="button4" layoutX="302.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="button5" layoutX="392.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="button6" layoutX="480.0" layoutY="27.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="button7" layoutX="570.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#btEscolherColuna" opacity="0.0" prefHeight="423.0" prefWidth="75.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
    </children>
 </AnchorPane>
