--- a/LIG4Jogo/bin/com/lig4/view/view.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/view.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -49,16 +50,25 @@
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button layoutX="260.0" layoutY="260.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Ranking" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Button layoutX="260.0" layoutY="323.0" mnemonicParsing="false" onAction="#btSairAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Sair" textFill="WHITE">
                      <font>
                         <Font name="Trebuchet MS" size="19.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Label layoutX="255.0" layoutY="42.0" prefHeight="75.0" prefWidth="131.0" text="LIG 4 " textFill="WHITE">
                      <font>
