--- a/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
+++ b/LIG4Jogo/src/com/lig4/view/modo_jogo.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,22 +11,31 @@
    <children>
       <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <Button layoutX="213.0" layoutY="120.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Clássico" textFill="WHITE">
+            <Button layoutX="191.0" layoutY="120.0" mnemonicParsing="false" onAction="#btClassico" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Clássico" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS" size="19.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="213.0" layoutY="184.0" mnemonicParsing="false" onAction="#btTurbo" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo" textFill="WHITE">
+            <Button layoutX="191.0" layoutY="187.0" mnemonicParsing="false" onAction="#btTurbo" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS" size="19.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Button layoutX="213.0" layoutY="245.0" mnemonicParsing="false" onAction="#btTurboMalucoAction" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo Maluco" textFill="WHITE">
+            <Button layoutX="191.0" layoutY="256.0" mnemonicParsing="false" onAction="#btTurboMalucoAction" prefHeight="45.0" prefWidth="259.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-width: 2;" text="Turbo Maluco" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS" size="19.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Label layoutX="213.0" layoutY="46.0" prefHeight="34.0" prefWidth="259.0" text="Escolha o modo de jogo" textAlignment="JUSTIFY" textFill="WHITE">
+            <Label layoutX="191.0" layoutY="46.0" prefHeight="34.0" prefWidth="259.0" text="Escolha o modo de jogo" textAlignment="JUSTIFY" textFill="WHITE">
                <font>
                   <Font size="23.0" />
                </font>
