--- a/LIG4Jogo/src/com/lig4/view/nomes.fxml
+++ b/LIG4Jogo/src/com/lig4/view/nomes.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -11,28 +12,31 @@
    <children>
       <Pane maxWidth="640.0" prefHeight="400.0" prefWidth="640.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
-            <Label layoutX="240.0" layoutY="50.0" prefHeight="34.0" prefWidth="259.0" text="Informe os nomes" textAlignment="JUSTIFY" textFill="WHITE">
+            <Label layoutX="227.0" layoutY="55.0" prefHeight="34.0" prefWidth="187.0" text="Informe os nomes" textAlignment="JUSTIFY" textFill="WHITE">
                <font>
                   <Font size="23.0" />
                </font>
             </Label>
-            <Label layoutX="91.0" layoutY="160.0" text="Jogador 1:" textFill="#fffefe">
+            <Label layoutX="91.0" layoutY="148.0" text="Jogador 1:" textFill="#fffefe">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label layoutX="91.0" layoutY="262.0" text="Jogador 2:" textFill="#fffefe">
+            <Label layoutX="91.0" layoutY="223.0" text="Jogador 2:" textFill="#fffefe">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Button layoutX="281.0" layoutY="331.0" mnemonicParsing="false" onAction="#btIniciarAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
+            <Button layoutX="260.0" layoutY="304.0" mnemonicParsing="false" onAction="#btIniciarAction" prefHeight="45.0" prefWidth="121.0" style="-fx-background-color: #FF3333; -fx-border-color: #FFCC00; -fx-border-radius: 20; -fx-background-radius: 20; -fx-border-width: 2;" text="Iniciar" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS" size="19.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <TextField layoutX="215.0" layoutY="163.0" prefHeight="25.0" prefWidth="318.0" />
-            <TextField layoutX="215.0" layoutY="265.0" prefHeight="25.0" prefWidth="318.0" />
+            <TextField layoutX="215.0" layoutY="151.0" prefHeight="25.0" prefWidth="318.0" />
+            <TextField layoutX="215.0" layoutY="226.0" prefHeight="25.0" prefWidth="318.0" />
          </children>
       </Pane>
    </children>
